# napari_svetlana

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  bitbucket-pipelines.yml  mkdocs.yml  setup.cfg  setup.py  tox.ini
.napari/: config.yml
docs/: index.md
docs/icip/: main.tex  refs.bib
docs/icip/Figures/: myfirstcnn.tex
images/: brydson_sampling.py  make_ellipse_with_hole.py  make_image.py
src/napari_segclassif/: CNN2D.py  CNN3D.py  CustomDataset.py  CustomDialog.py  Prediction3DDataset.py  PredictionDataset.py  PredictionMulti3DDataset.py  __init__.py  _dock_widget.py  debug.py  script_training_test.py
src/napari_segclassif/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
src/napari_svetlana/: CNN2D.py  CNN3D.py  Config.json  DemoDialog.py  Prediction3DDataset.py  PredictionDataset.py  PredictionMulti3DDataset.py  __init__.py  _batch_dock_widget.py  _dock_widget.py  extract_save_patches.py  modulable_CNN3D.py  mosa.py  napari.yaml  script_training_3D_1net.py  test_gradcam.py  test_gradcam3D.py  testeur.py
src/napari_svetlana/Grad_Cam/: base_cam.py  grad_cam.py  image.py
src/napari_svetlana/XP/: Predict3Dbatch.py  Prediction3DDataset_dilation.py  compute_accuracy.py  extract_save_patches.py  modulable_CNN3D.py  redim.py  reseau.py  script_training-stability_test.py  script_training_3D_1net.py  script_training_3D_dilatation_mask.py  script_training_3D_patch_size_norm.py  script_training_test.py  testeur.py
src/napari_svetlana/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
src/napari_svetlana/complete_pipeline/: Big_template.py  CNN2D.py  Classifier_functions.py  Config.json  Config_edu.json  PredictionDataset.py  calculs_masks_1et2.py  mosaique_images_brutes.py  mosaïque_labels.py  mosaïque_labels_canal2.py  new_training_edu+.pth  new_training_ki67+.pth  table_resultat.py  training_vivant_mort.pth
