[metadata]
name = napari_svetlana
version = 0.1.3
author = Clément Cazorla
author_email = clement.cazorla31@gmail.com

license = GPL-3.0-only
description = A classification plugin for the ROIs of a segmentation mask.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
python_requires = >=3.9
package_dir =
    =src
include_package_data=True

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    albumentations==1.0.3
    joblib==1.1.0
    torch;platform_system=='Linux'
    torchvision;platform_system=='Linux'
    torchaudio;platform_system=='Linux'
    torch @ https://download.pytorch.org/whl/cu116/torch-1.12.1%%2Bcu116-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    torchvision @ https://download.pytorch.org/whl/cu116/torchvision-0.13.1%%2Bcu116-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    torchaudio @ https://download.pytorch.org/whl/cu116/torchaudio-0.12.1%%2Bcu116-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    matplotlib
    opencv-python==4.5.5.62
    PyQt5
    cucim==22.6.0;platform_system=='Linux'
    cupy-cuda102==10.6.0

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari_svetlana = napari_svetlana
